# barkprints

./: .dockerignore  .gitignore  CORPUS_GUIDE.md  Dockerfile  README.md  docker-compose.yml  example.py  pyproject.toml
src/barkprints/: __main__.py  corpus.py  corpus_builder.py  corpus_loader.py  feature_extractor.py  format_loader.py  text_generator.py  vocabulary.py  vocabulary_loader.py  walk_generator.py
src/barkprints/corpora/: literature.npz  nature.npz  tao.npz
src/barkprints/output_formats/: __init__.py  base_format.py  commentary_format.py  haiku_format.py  sentence_format.py  template_format.py
src/barkprints/vocabularies/: nature.json  news.json  template_commentary.json  template_haiku.json
src/barkprints/web/: __init__.py  __main__.py  app.py
src/barkprints/web/static/: index.html  manifest.webmanifest  sw.js
tests/: conftest.py  test_cli.py  test_corpus.py  test_corpus_builder.py  test_feature_extractor.py  test_integration.py  test_output_formats.py  test_text_generator.py  test_vocabulary.py  test_walk_generator.py
